<resources>
    <string name="action_settings">Settings</string>
    <string name="ps_login_button_text">Login</string>
    <string name="ps_login_user_name_hint">Enter user name here</string>
    <string name="ps_login_user_pin_hint">Enter PIN here</string>
    <string name="ps_sample_date">Oct.01.2015</string>
    <string name="ps_sample_name">John Doe</string>
    <string name="ps_sample_weight">160 lb</string>
    <string name="ps_sample_height">5\'7\'\'</string>
    <string name="ps_sample_age">(30)</string>
    <string name="ps_sample_bmi">BMI: 16.0</string>
    <string name="ps_sample_fav_exer">♥ Running</string>
    <string name="ps_sample_marker_mod">Moderate: **</string>
    <string name="ps_sample_marker_vig">Vigorous: **</string>
    <string name="ps_sample_marker_mus">Muscle: **</string>
    <string name="ps_sample_marker_stp">Steps: **</string>
    <string name="ps_sample_message">Hi!\nEveryone!</string>
    <string name="ps_user_data_radio_day">Today</string>
    <string name="ps_user_data_radio_week">Week</string>
    <string name="ps_record_title">Your activities</string>
    <string name="ps_c1_name">Moderate:</string>
    <string name="ps_c2_name">Vigorous:</string>
    <string name="ps_c3_name">Muscle:</string>
    <string name="ps_record_hint">minutes</string>
    <string name="ps_record_default_val">10\'</string>
    <string name="ps_record_button">Submit</string>
    <string name="ps_sport_choose">Choose exercise</string>
    <string name="ps_change_fav">Change</string>
    <string name="ps_change_fav_alert_title">Enter your favorite exercise:</string>
    <string name="ps_service_messages">com.pennshape.app.service.PSMessagesService</string>
    <string name="ps_service_messages_new">You have new messages!</string>
    <string name="ps_service_message_intent_extra">ps.message.new</string>
    <string name="ps_service_alert_intent_extra">ps.alert.reminder</string>
    <string name="ps_service_alert_message_morning">Good morning! Please don\'t forget to wear your Fitbit.</string>
    <string name="ps_service_alert_message_evening">Good evening! Please don\'t forget to fill out today\'s activities.</string>
    <string name="ps_admin_send">Send</string>
    <string name="ps_admin_clear">Clear</string>

    <!--MOD-->
    <string name="ps_sport_jumping_ropes">Jumping ropes</string>
    <string name="ps_sport_biking">Biking</string>
    <string name="ps_sport_fast_walking">Fast Walking</string>
    <string name="ps_sport_climbling_steps">Climbling steps</string>
    <string name="ps_sport_housekeeping">Housekeeping</string>
    <!--VIG-->
    <string name="ps_sport_dancing">Dancing, Zumba</string>
    <string name="ps_sport_spinning">Spinning</string>
    <string name="ps_sport_swimming">Swimming</string>
    <string name="ps_sport_tennis">Tennis</string>
    <string name="ps_sport_running">Running</string>
    <!--MUS-->
    <string name="ps_sport_sit_up">Sit-up</string>
    <string name="ps_sport_push_up">Push-up</string>
    <string name="ps_sport_squat">Squat</string>
    <string name="ps_sport_weightlifting">Weight lifting</string>
    <string name="ps_sport_yoga">Yoga</string>

    <string name="ps_chat_placeholder">You have no message</string>
    <string name="ps_setting_logout">Logout</string>
    <string name="ps_setting_update_weight">Update body weight</string>
    <string name="ps_message_button">Chat</string>

    <!--KEYS-->
    <string name="ps_pref_name">com.pennshape.app.pref.default</string>
    <string name="ps_pref_key_id">com.pennshape.app.pref.key.id</string>
    <string name="ps_pref_key_group">com.pennshape.app.pref.key.group</string>
    <string name="ps_pref_key_last_commit">com.pennshape.app.pref.key.lastcommit</string>
</resources>
