<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#eaecee"
    tools:context="com.pennshape.app.fragment.PSSettingFragmentTab">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/ps_sample_name"
        style="@style/SettingProfileFont"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/image"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/sample_photo_1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/ps_setting_change"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/age"
            android:text="@string/ps_sample_age"
            style="@style/SettingProfileFont"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/height"
            android:text="@string/ps_sample_height"
            style="@style/SettingProfileFont"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/weight"
            android:text="@string/ps_sample_weight"
            style="@style/SettingProfileFont"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/ps_setting_update_weight"
            />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/ps_setting_logout"/>

</LinearLayout>
