<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ps_border"
    android:padding="5dp"
    tools:context="com.pennshape.app.view.PSUserInfoSelectionView">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/image"
        android:layout_centerVertical="true"
        android:background="@color/ps_light_bg"
        android:src="@drawable/img_face_black"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info_layout"
        android:layout_toEndOf="@id/image"
        android:layout_toRightOf="@id/image"
        android:layout_marginLeft="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/ps_sample_name"
            style="@style/UserInfoFont"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/age"
            android:layout_toEndOf="@id/name"
            android:layout_toRightOf="@id/name"
            android:text="@string/ps_sample_age"
            style="@style/UserInfoFont"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmi"
            android:layout_below="@id/name"
            android:layout_marginLeft="5dp"
            android:text="@string/ps_sample_bmi"
            style="@style/UserInfoFont"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fav"
            android:layout_below="@id/bmi"
            android:layout_marginLeft="5dp"
            android:text="@string/ps_sample_fav_exer"
            style="@style/UserInfoFont"/>
    </RelativeLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox"
        android:layout_alignBottom="@id/info_layout"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-5dp"
        android:checked="true"/>
</RelativeLayout>