<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="#eaecee"
    tools:context="com.pennshape.app.fragment.PSDailyUpdateFragmentTab">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date_text"
        android:layout_gravity="center"
        android:text="Aug.25.1984"
        android:paddingBottom="15dp"
        style="@style/UserDateFont"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/ps_border"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ps_record_title"
            android:layout_margin="20dp"
            style="@style/UserDateFont"/>
        <!--C1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/ps_c1_name"/>
            <SeekBar
                android:id="@+id/volume_bar_c1"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="10"
                android:secondaryProgress="0" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/c1_display"
                android:layout_gravity="center_vertical"
                android:text="@string/ps_record_default_val"/>
        </LinearLayout>

        <!--C2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/ps_c2_name"/>
            <SeekBar
                android:id="@+id/volume_bar_c2"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="10"
                android:secondaryProgress="0" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/c2_display"
                android:layout_gravity="center_vertical"
                android:text="@string/ps_record_default_val"/>
        </LinearLayout>

        <!--C3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/ps_c3_name"/>
            <SeekBar
                android:id="@+id/volume_bar_c3"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="10"
                android:secondaryProgress="0" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/c3_display"
                android:layout_gravity="center_vertical"
                android:text="@string/ps_record_default_val"/>
        </LinearLayout>

        <!--Button-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="90dp"
            android:text="@string/ps_record_button"/>

    </LinearLayout>

</LinearLayout>
